Argo CD/argoproj/CD/webapi/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapi
    component: webapi
    tier: backend
  name: webapi
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: webapi
      component: webapi
      tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapi
        component: webapi
        tier: backend
    spec:
      containers:
        - env:
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
          image: webapi:latest
          imagePullPolicy: Always
          name: webapi-pod
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
          resources:
            limits:
              cpu: 800m
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: 8000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
                path: /healthz/liveness
                port: 8000
            initialDelaySeconds: 130
            timeoutSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: tz-config
          hostPath:
            path: /etc/localtime
