Argo CD/argoproj/CD/webapi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapi
    component: webapi
  name: webapi
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: webapi
    component: webapi
    tier: backend
  sessionAffinity: None
