Argo CD/argoproj/CD/webapi/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi
spec:
  rules:
    - host: webapi.test.com
      http:
        paths:
          - backend:
              service:
                name: webapi
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
